Create <> Login form

--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>QUIZIFY</title>
 </head>
 <body>
-    
+    <div class="index-container">
+        <form action="" id="form1-login" class="form1-login">
+            <h1>Welcome To <br> <span> QUIZIFY</span> </h1>
+            <br><br><br>
+            <table>
+                <tr>
+                    <td class="align-Left"> <label for="email-login"> 📧Email : </label> </td>
+                    <td> <input type="text" id="email-login" required> </td>
+                </tr>
+                <tr>
+                    <td class="align-Left"> <label for="pass-login"> 🔒Password : </label></td>
+                    <td> <input type="password" id="pass-login" required></td>
+                </tr>
+                <tr>
+                    <td colspan="2"> <button type="submit" id="loginbtn">LOGIN</button> </td>
+                </tr>
+                <tr>
+                    <td colspan="2"> <a href="#form2-signup" id="notMemberLink"> Not a member? SIGNUP </a> </td>
+                </tr>
+            </table>
+        </form>
+
+        
+    </div>
 </body>
 </html>
