Create <> SignUp form

--- a/index.html
+++ b/index.html
@@ -28,7 +28,26 @@
             </table>
         </form>
 
-        
+        <form action="" id="form2-signup" class="form2-signup">
+            <h1><br><br>Welcome Dear! </h1>
+            <table>
+                <tr>
+                    <td class="align-Left"> <label for="name-signup"> 👤Name : </label> </td>
+                    <td> <input type="text" id="name-signup" required> </td>
+                </tr>
+                <tr>
+                    <td class="align-Left"> <label for="email-signup"> 📧Email : </label> </td>
+                    <td> <input type="text" id="email-signup" required> </td>
+                </tr>
+                <tr>
+                    <td class="align-Left"> <label for="pass-signup"> 🔒Password : </label></td>
+                    <td> <input type="password" id="pass-signup" required></td>
+                </tr>
+                <tr>
+                    <td colspan="2"> <button type="submit" id="signupbtn">SIGN UP</button> </td>
+                </tr>
+            </table>
+        </form>
     </div>
 </body>
 </html>
