--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUIZIFY</title>
+    <link rel="stylesheet" href="./Styles/index.css">
 </head>
 <body>
     <div class="index-container">
