Build <> a section to display the html quiz entry

--- a/home.html
+++ b/home.html
@@ -19,5 +19,15 @@
         <br />
         <p>Select your quiz and let the game begin 🎯</p>
       </div>
+
+      <div class="flex">
+        <section>
+          <h2>HTML</h2> <hr><hr><hr><br>
+          <p class="mini-title">The foundation of every webpage.</p>
+          <button id="htmlbtn" class="btnStart">Let's start</button>
+        </section>
+  
+        
+      </div>
 </body>
 </html>
