Build <> a section to display the css quiz entry

--- a/home.html
+++ b/home.html
@@ -27,6 +27,12 @@
           <button id="htmlbtn" class="btnStart">Let's start</button>
         </section>
   
+        <section>
+          <h2>CSS</h2> <hr><hr><hr><br>
+          <p class="mini-title">Style your web with confidence.</p>
+          <button id="cssbtn" class="btnStart">Let's start</button>
+        </section>
+  
         
       </div>
 </body>
