Build <> a section to display the sql quiz entry

--- a/home.html
+++ b/home.html
@@ -33,7 +33,11 @@
           <button id="cssbtn" class="btnStart">Let's start</button>
         </section>
   
-        
+        <section>
+          <h2>SQL</h2> <hr><hr><hr><br>
+          <p class="mini-title">Unleash the power of data— <br>one query at a time!</p>
+          <button id="sqlbtn" class="btnStart">Let's start</button>
+        </section>
       </div>
 </body>
 </html>
