--- a/quiz.html
+++ b/quiz.html
@@ -8,6 +8,58 @@
 <body>
     <header></header>
 
+    <main>        
+        <section class="flex">
+            <section class="qu-container q1">
+                <h2 id="qu1-name"></h2>
+                <hr><hr><hr><br>
+                <div>
+                    <div>
+                        <button id="qu1option1" class="option"></button>
+                        <button id="qu1option2" class="option"></button>
+                    </div>
+                    <div>
+                        <button id="qu1option3" class="option"></button>
+                        <button id="qu1option4" class="option"></button>
+                    </div>
+                </div>
+            </section>
+
+            <section class="qu-container q2">
+                <h2 id="qu2-name"></h2>
+                <hr><hr><hr><br>
+                <div>
+                    <div>
+                        <button id="qu2option1" class="option"></button>
+                        <button id="qu2option2" class="option"></button>
+                    </div>
+                    <div>
+                        <button id="qu2option3" class="option"></button>
+                        <button id="qu2option4" class="option"></button>
+                    </div>
+                </div>
+            </section>
+
+            <section class="qu-container q3">
+                <h2 id="qu3-name"></h2>
+                <hr><hr><hr><br>
+                <div>
+                    <div>
+                        <button id="qu3option1" class="option"></button>
+                        <button id="qu3option2" class="option"></button>
+                    </div>
+                    <div>
+                        <button id="qu3option3" class="option"></button>
+                        <button id="qu3option4" class="option"></button>
+                    </div>
+                </div>
+            </section>
+        </section>
+
+        <button class="submit" id="submit">Submit</button>
+    </main>
+
+
     <footer></footer>
 
 </body>
