Create <> table to display all registered users with their scores

--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,22 @@
 <body>
     <header></header>
 
+    <main>
+        <h1>All Registered Users & Their Scores</h1>
+        <br><hr><hr><hr><br>
+        <table id="user-table">
+          <thead>
+            <tr>
+              <th>User Email</th>
+              <th>Scores</th>
+            </tr>
+          </thead>
+          <tbody>  
+            <!-- JavaScript will populate rows here -->
+          </tbody>
+        </table>
+      </main>
+
     <footer></footer>
 </body>
 </html>
