Link <> home.html with home.js

--- a/home.html
+++ b/home.html
@@ -40,5 +40,7 @@
           <button id="sqlbtn" class="btnStart">Let's start</button>
         </section>
       </div>
+
+      <script src="/Scripts/home.js"></script>
 </body>
 </html>
