Add <> placeholder and required validation

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <table>
                 <tr>
                     <td class="align-Left"> <label for="email-login"> 📧Email : </label> </td>
-                    <td> <input type="text" id="email-login" required> </td>
+                    <td> <input type="text" id="email-login" required placeholder="user@quiz.com"> </td>
                 </tr>
                 <tr>
                     <td class="align-Left"> <label for="pass-login"> 🔒Password : </label></td>
-                    <td> <input type="password" id="pass-login" required></td>
+                    <td> <input type="password" id="pass-login" required placeholder="*********"></td>
                 </tr>
                 <tr>
                     <td colspan="2"> <button type="submit" id="loginbtn">LOGIN</button> </td>
@@ -34,15 +34,15 @@
             <table>
                 <tr>
                     <td class="align-Left"> <label for="name-signup"> 👤Name : </label> </td>
-                    <td> <input type="text" id="name-signup" required> </td>
+                    <td> <input type="text" id="name-signup" required placeholder="usesrname"> </td>
                 </tr>
                 <tr>
                     <td class="align-Left"> <label for="email-signup"> 📧Email : </label> </td>
-                    <td> <input type="text" id="email-signup" required> </td>
+                    <td> <input type="text" id="email-signup" required placeholder="user@quiz.com"> </td>
                 </tr>
                 <tr>
                     <td class="align-Left"> <label for="pass-signup"> 🔒Password : </label></td>
-                    <td> <input type="password" id="pass-signup" required></td>
+                    <td> <input type="password" id="pass-signup" required placeholder="*********"></td>
                 </tr>
                 <tr>
                     <td colspan="2"> <button type="submit" id="signupbtn">SIGN UP</button> </td>
