Organize <> logout button

--- a/dashboard.html
+++ b/dashboard.html
@@ -26,6 +26,11 @@
         </table>
       </main>
 
+      <div>
+        <button type="submit" id="logoutbtn">LOGOUT</button>
+      </div>
+
+
     <footer></footer>
 
     <script src="/Scripts/dashboard.js"></script>
