--- a/home.html
+++ b/home.html
@@ -41,6 +41,10 @@
         </section>
       </div>
 
+      <div>
+        <button type="submit" id="logoutbtn">LOGOUT</button>
+      </div>
+
       <script src="/Scripts/home.js"></script>
 </body>
 </html>
